Add numpy in requirements.txt

--- a/nginx-gunicorn-flask-web/requirements.txt
+++ b/nginx-gunicorn-flask-web/requirements.txt
@@ -1,4 +1,4 @@
-../app/candy/endpoints/candy_hello.pyFlask
+Flask
 MarkupSafe
 Werkzeug
 argparse
@@ -14,3 +14,4 @@ pymongo==2.8
 docopt
 gunicorn
 requests
+numpy
